a11y - 檢查無障礙規範

--- a/app/burn.html
+++ b/app/burn.html
@@ -37,7 +37,7 @@ current: burn
       </div>
     </section>
     <!-- 主要內容 -->
-    <div class="col-md-8">
+    <section class="col-md-8 pt-0 pt-sm-4">
       <div class="tab-content" id="nav-tabContent">
         <!-- 活動主旨 -->
         <section class="tab-pane mb-5 p-5 bg-info fade show active" id="list-main" role="tabpanel"
@@ -141,15 +141,15 @@ current: burn
           </div>
           <h2 class="h4 mb-3">附加連結</h2>
           <ul>
-            <li><a href="https://ksepb.kcg.gov.tw/AdministrativeMessages/AboutUs/CleaningTeam.htm" target="_blank"
-                title="高雄市 37 區清潔隊聯繫清冊(另開新分頁)">高雄市 37 區清潔隊聯繫清冊</a>
+            <li><a href="https://ksepb.kcg.gov.tw/AdministrativeMessages/AboutUs/CleaningTeam.htm" target="_blank" title="另開新視窗"
+                title="高雄市 37 區清潔隊聯繫清冊(另開新視窗)">高雄市 37 區清潔隊聯繫清冊</a>
             </li>
             <li><a href="#" data-toggle="modal" data-target="#transportModal" title="紙錢收運流程">紙錢收運流程</a></li>
             <li><a href="#" data-toggle="modal" data-target="#fillingModal" title="運送聯單填寫範例">運送聯單填寫範例</a></li>
           </ul>
         </section>
       </div>
-    </div>
+    </section>
   </div>
 
 </div>
