--- a/app/burnSchedule.html
+++ b/app/burnSchedule.html
@@ -38,7 +38,7 @@ current: burnSchedule
       </div>
     </section>
     <!-- 主要內容 -->
-    <div class="col-md-8">
+    <section class="col-md-8 pt-0 pt-sm-4">
       <div class="tab-content" id="nav-tabContent">
         <!-- 春節祭祖暨天公生實施時間 -->
         <section class="tab-pane fade show active" id="list-chineseNewYear" role="tabpanel"
@@ -76,7 +76,7 @@ current: burnSchedule
           </div>
         </section>
       </div>
-    </div>
+    </section>
   </div>
 
 </div>
