--- a/app/contact.html
+++ b/app/contact.html
@@ -5,7 +5,7 @@ engine: ejs
 current: contact
 ---
 
-<div class="content container min-h">
+<div class="content container ">
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
     <div id="tabC">
