--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,11 @@ current: index
           <img src="./assets/images/carousel_img3.jpg" class="img-fluid" alt="不擾鄰" />
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" title="上一張">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">上一張</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" title="下一張">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">下一張</span>
       </a>
@@ -125,12 +125,7 @@ current: index
           <h2 class="h4 border-width pl-3 py-2 mb-3">影音專區</h2>
 
           <div class="embed-responsive embed-responsive-16by9">
-            <!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SqEs0TPCAK0" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SqEs0TPCAK0" frameborder="0"
-              allow="autoplay; encrypted-media" allowfullscreen title=""></iframe>
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/x4u8_nElwHg" frameborder="0"
-              allow="autoplay; encrypted-media" allowfullscreen title=""></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PL2Og3Q2lWybviBM-jwFxmW_xxinHmSr5v" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -145,7 +140,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare1.jpg" alt="財團法人高雄市私立樂仁啟智中心" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://lerencenter.eoffering.org.tw/" target="_blank"
+              <a href="https://lerencenter.eoffering.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人高雄市私立樂仁啟智中心(另開新視窗)"><small>財團法人高雄市私立樂仁啟智中心</small></a>
             </div>
           </div>
@@ -154,7 +149,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare2.jpg" alt="唐氏症基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.rocdown-syndrome.org.tw/" target="_blank"
+              <a href="http://www.rocdown-syndrome.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="唐氏症基金會(另開新視窗)"><small>唐氏症基金會</small></a>
             </div>
           </div>
@@ -163,7 +158,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare3.jpg" alt="星星兒社會福利基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.starfamily.org.tw/" target="_blank"
+              <a href="http://www.starfamily.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="星星兒社會福利基金會(另開新視窗)"><small>星星兒社會福利基金會</small></a>
             </div>
           </div>
@@ -172,7 +167,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare4.png" alt="財團法人勵馨社會福利事業基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.goh.org.tw/tc/index.asp" target="_blank"
+              <a href="https://www.goh.org.tw/tc/index.asp" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人勵馨社會福利事業基金會(另開新視窗)"><small>財團法人勵馨社會福利事業基金會</small></a>
             </div>
           </div>
@@ -181,7 +176,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare5.jpg" alt="社團法人高雄市春陽協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://chuen-yang.blogspot.com/" target="_blank"
+              <a href="http://chuen-yang.blogspot.com/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市春陽協會(另開新視窗)"><small>社團法人高雄市春陽協會</small></a>
             </div>
           </div>
@@ -190,7 +185,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare6.jpg" alt="中華民國紅十字會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.redcross.org.tw/" target="_blank" class="stretched-link" title="中華民國紅十字會(另開新視窗)"><small>中華民國紅十字會</small></a>
+              <a href="http://www.redcross.org.tw/" target="_blank" title="另開新視窗" class="stretched-link" title="中華民國紅十字會(另開新視窗)"><small>中華民國紅十字會</small></a>
             </div>
           </div>
         </div>
@@ -198,7 +193,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare7.jpg" alt="財團法人心路社會福利基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.syinlu.org.tw/" target="_blank"
+              <a href="https://www.syinlu.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人心路社會福利基金會(另開新視窗)"><small>財團法人心路社會福利基金會</small></a>
             </div>
           </div>
@@ -207,7 +202,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare8.png" alt="高雄市關懷魚鱗癬協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://taifish.pixnet.net/blog" target="_blank"
+              <a href="https://taifish.pixnet.net/blog" target="_blank" title="另開新視窗"
                 class="stretched-link" title="高雄市關懷魚鱗癬協會(另開新視窗)"><small>高雄市關懷魚鱗癬協會</small></a>
             </div>
           </div>
@@ -216,7 +211,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare9.jpg" alt="社團法人高雄市自閉症協進會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.ksautism.org.tw/ap/index.aspx" target="_blank"
+              <a href="http://www.ksautism.org.tw/ap/index.aspx" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市自閉症協進會(另開新視窗)"><small>社團法人高雄市自閉症協進會</small></a>
             </div>
           </div>
@@ -225,7 +220,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare10.jpg" alt="財團法人創世社會福利基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.genesis.org.tw/" target="_blank"
+              <a href="https://www.genesis.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人創世社會福利基金會(另開新視窗)"><small>財團法人創世社會福利基金會</small></a>
             </div>
           </div>
@@ -234,7 +229,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare11.jpg" alt="社團法人高雄市唐氏症歡喜協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://taiwanhappy.org.tw/h/Index?key=700667796368" target="_blank"
+              <a href="https://taiwanhappy.org.tw/h/Index?key=700667796368" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市唐氏症歡喜協會(另開新視窗)"><small>社團法人高雄市唐氏症歡喜協會</small></a>
             </div>
           </div>
@@ -243,7 +238,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare12.jpg" alt="台灣兒童暨家庭扶助基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://donate.ccf.org.tw/32" target="_blank"
+              <a href="https://donate.ccf.org.tw/32" target="_blank" title="另開新視窗"
                 class="stretched-link" title="台灣兒童暨家庭扶助基金會(另開新視窗)"><small>台灣兒童暨家庭扶助基金會</small></a>
             </div>
           </div>
@@ -252,7 +247,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare13.jpg" alt="社團法人高雄市愛種樹協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.iplanting.org/" target="_blank"
+              <a href="https://www.iplanting.org/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市愛種樹協會(另開新視窗)"><small>社團法人高雄市愛種樹協會</small></a>
             </div>
           </div>
@@ -261,7 +256,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare14.jpg" alt="社團法人高雄市腦性麻痺服務協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.khcp.org.tw/" target="_blank"
+              <a href="http://www.khcp.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市腦性麻痺服務協會(另開新視窗)"><small>社團法人高雄市腦性麻痺服務協會</small></a>
             </div>
           </div>
@@ -270,7 +265,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare15.jpg" alt="財團法人高雄市私立博正兒童發展中心" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.pochild.org.tw/" target="_blank"
+              <a href="http://www.pochild.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人高雄市私立博正兒童發展中心(另開新視窗)"><small>財團法人高雄市私立博正兒童發展中心</small></a>
             </div>
           </div>
@@ -279,7 +274,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare16.png" alt="弘道老人福利基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.hondao.org.tw/article-detail/6700" target="_blank"
+              <a href="http://www.hondao.org.tw/article-detail/6700" target="_blank" title="另開新視窗"
                 class="stretched-link" title="弘道老人福利基金會(另開新視窗)"><small>弘道老人福利基金會</small></a>
             </div>
           </div>
@@ -288,7 +283,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare17.jpg" alt="安得烈食物銀行" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.chaca.org.tw/" target="_blank" class="stretched-link" title="安得烈食物銀行(另開新視窗)"><small>安得烈食物銀行</small></a>
+              <a href="https://www.chaca.org.tw/" target="_blank" title="另開新視窗" class="stretched-link" title="安得烈食物銀行(另開新視窗)"><small>安得烈食物銀行</small></a>
             </div>
           </div>
         </div>
@@ -296,7 +291,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare18.png" alt="高雄市快樂堤心理協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.ourquality.com.tw/" target="_blank"
+              <a href="https://www.ourquality.com.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="高雄市快樂堤心理協會(另開新視窗)"><small>高雄市快樂堤心理協會</small></a>
             </div>
           </div>
@@ -305,7 +300,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare19.jpg" alt="財團法人高雄市私立紅十字會育幼中心慈暉園" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.cihhueigarden.org.tw/" target="_blank"
+              <a href="http://www.cihhueigarden.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人高雄市私立紅十字會育幼中心慈暉園(另開新視窗)"><small>財團法人高雄市私立紅十字會育幼中心慈暉園</small></a>
             </div>
           </div>
@@ -314,7 +309,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare20.jpg" alt="社團法人高雄市自強身障關懷協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.facebook.com/hasbf.official/" target="_blank"
+              <a href="https://www.facebook.com/hasbf.official/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市自強身障關懷協會(另開新視窗)"><small>社團法人高雄市自強身障關懷協會</small></a>
             </div>
           </div>
@@ -323,7 +318,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare21.jpg" alt="社團法人高雄市芬多精身心障礙關懷保護協會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.facebook.com/profile.php?id=100004131369183" target="_blank"
+              <a href="https://www.facebook.com/profile.php?id=100004131369183" target="_blank" title="另開新視窗"
                 class="stretched-link" title="社團法人高雄市芬多精身心障礙關懷保護協會(另開新視窗)"><small>社團法人高雄市芬多精身心障礙關懷保護協會</small></a>
             </div>
           </div>
@@ -332,7 +327,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare22.jpg" alt="喜憨兒基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.c-are-us.org.tw/" target="_blank" class="stretched-link" title="喜憨兒基金會(另開新視窗)"><small>喜憨兒基金會</small></a>
+              <a href="http://www.c-are-us.org.tw/" target="_blank" title="另開新視窗" class="stretched-link" title="喜憨兒基金會(另開新視窗)"><small>喜憨兒基金會</small></a>
             </div>
           </div>
         </div>
@@ -340,7 +335,7 @@ current: index
           <div class="card mb-3 border-0">
             <img src="./assets/images/social_welfare23.png" alt="天主教善牧基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="http://www.goodshepherd.org.tw/chtw/" target="_blank"
+              <a href="http://www.goodshepherd.org.tw/chtw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="天主教善牧基金會(另開新視窗)"><small>天主教善牧基金會</small></a>
             </div>
           </div>
@@ -349,7 +344,7 @@ current: index
           <div class="card border-0">
             <img src="./assets/images/social_welfare24.jpg" alt="財團法人天主教白永恩神父社會福利基金會" class="img-fluid" />
             <div class="card-body text-center py-0 px-0">
-              <a href="https://www.beunen.org.tw/" target="_blank"
+              <a href="https://www.beunen.org.tw/" target="_blank" title="另開新視窗"
                 class="stretched-link" title="財團法人天主教白永恩神父社會福利基金會(另開新視窗)"><small>財團法人天主教白永恩神父社會福利基金會</small></a>
             </div>
           </div>
