--- a/app/information.html
+++ b/app/information.html
@@ -22,27 +22,27 @@ current: information
   <h1 class="my-5 border-width pl-3">訊息專區</h1>
 
   <!-- 主要內容 -->
-  <section class="row mb-5">
-    <div class="col-md-6 mb-3 mb-md-0">
+  <div class="row mb-5">
+    <section class="col-md-6 mb-md-0">
       <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationNews.html" title="前往最新消息" role="button">
         最新消息
       </a>
-    </div>
-    <div class="col-md-6 mb-3 mb-md-0">
+    </section>
+    <section class="col-md-6 mb-md-0">
       <a class="btn btn-info btn-block py-4 mb-3 mb-md-4" href="informationPictures.html" title="前往活動照片" role="button">
         活動照片
       </a>
-    </div>
-    <div class="col-md-6 mb-3 mb-md-0">
+    </section>
+    <section class="col-md-6 mb-md-0">
       <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="templeInfo.html" title="前往寺廟資訊" role="button">
         寺廟資訊
       </a>
-    </div>
-    <div class="col-md-6 mb-3 mb-md-0">
+    </section>
+    <section class="col-md-6 mb-md-0">
       <a class="btn btn-info btn-block py-4 mb-3 mb-md-0" href="burnSchedule.html" title="前往集中燒化時程" role="button">
         集中燒化時程
       </a>
-    </div>
-  </section>
+    </section>
+  </div>
 
 </div>
