--- a/app/informationNews_107.html
+++ b/app/informationNews_107.html
@@ -24,10 +24,10 @@ current: informationNews_107
   <h1 class="my-5 border-width pl-3">107 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 107.12.27 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">環保局召開寺廟宣導說明會 宣導環保金爐正確操作</h2>
         <p><small class="mb-2">107.12.27</small></p>
         <p class="text-mul-truncate">
@@ -37,9 +37,9 @@ current: informationNews_107
         <div class="d-flex w-100 justify-content-end">
           <a class="text-primary stretched-link" href="information_1071227.html" title="前往 107 年 12 月 27 日的新聞內容" role="button">閱讀更多...</a>
         </div>
-      </section>
+      </article>
       <!-- 107.11.28 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">環保與文化衝突 — 空污與民俗的翻雲覆雨</h2>
         <p><small class="mb-2">107.11.28</small></p>
         <p class="text-mul-truncate">
@@ -51,9 +51,9 @@ current: informationNews_107
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
       <!-- 107.10.12 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">以功代金少燒紙錢 24 公噸 相當 85 大樓高度的 52 倍</h2>
         <p><small class="mb-2">107.10.12</small></p>
         <p class="text-mul-truncate">
@@ -65,7 +65,7 @@ current: informationNews_107
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
 </div>
