--- a/app/informationNews_108.html
+++ b/app/informationNews_108.html
@@ -24,10 +24,10 @@ current: informationNews_108
   <h1 class="my-5 border-width pl-3">108 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 108.12.30 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">金紙搭上環保潮　實質效力存疑慮</h2>
         <p><small class="mb-2">108.12.30</small></p>
         <p class="text-mul-truncate">
@@ -37,9 +37,9 @@ current: informationNews_108
         <div class="d-flex w-100 justify-content-end">
           <a class="text-primary stretched-link" href="information_1081230.html" title="前往 108 年 12 月 30 日的新聞內容" role="button">閱讀更多...</a>
         </div>
-      </section>
+      </article>
       <!-- 108.11.11 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">高雄以功代金 14 年 減少燃燒紙錢 179 公噸 企業社區大樓齊協力 新住民一起環保做公益</h2>
         <p><small class="mb-2">108.11.11</small></p>
         <p class="text-mul-truncate">
@@ -52,9 +52,9 @@ current: informationNews_108
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
       <!-- 108.10.29 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">無菸婦氣喘不停罹「肺阻塞」　醫護「隔空診斷」患者住家神明廳有異</h2>
         <p><small class="mb-2">108.10.29</small></p>
         <p class="text-mul-truncate">
@@ -66,7 +66,7 @@ current: informationNews_108
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
 </div>
