--- a/app/informationNews_109.html
+++ b/app/informationNews_109.html
@@ -24,10 +24,10 @@ current: informationNews_109
   <h1 class="my-5 border-width pl-3">109 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 109.08.13 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">109 年度中元普渡紙錢集中燒活動期程表</h2>
         <p><small class="mb-2">109.08.13</small></p>
         <p class="text-mul-truncate">本年度中元普渡活動時間為 109 年 8 月 19 日～9 月 16 日
@@ -37,9 +37,9 @@ current: informationNews_109
         <div class="d-flex w-100 justify-content-end">
           <a class="text-primary stretched-link" href="information_1090813.html" title="前往 109 年 8 月 13 日的新聞內容" role="button">閱讀更多...</a>
         </div>
-      </section>
+      </article>
       <!-- 109.08.12 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">中元普渡時節到 紙錢減量空污少 祭祀拜拜少燒金 以功代金最誠心</h2>
         <p><small class="mb-2">109.08.12</small></p>
         <p class="text-mul-truncate">高雄市今 (12)
@@ -51,9 +51,9 @@ current: informationNews_109
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
       <!-- 109.07.27 的新聞 -->
-      <section class="list-group-item list-group-item-action border-under p-4">
+      <article class="list-group-item list-group-item-action border-under p-4">
         <h2 class="h5 mb-2">玉皇宮「燒紙錢」竄黑煙 民眾怒投訴</h2>
         <p><small class="mb-2">109.07.27</small></p>
         <p class="text-mul-truncate">住在高雄玉皇宮附近的民眾控訴，金紙爐燒出大量黑煙，造成空汙，氣到拍影片 po
@@ -66,7 +66,7 @@ current: informationNews_109
             閱讀更多...
           </a>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
 </div>
