--- a/app/informationPicture_108.html
+++ b/app/informationPicture_108.html
@@ -5,7 +5,7 @@ engine: ejs
 current: informationPicture_108
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
@@ -24,15 +24,15 @@ current: informationPicture_108
   <h1 class="my-5 border-width pl-3">108 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 108 年以功代金成果發表會 (108.11.07) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">以功代金成果發表會</h2>
-          <h2 class="h5 mb-2">108.11.07</h2>
+          <small class="mb-2">108.11.07</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：高雄市環保局一樓</h2>
+        <small class="mb-2">舉辦地點：高雄市環保局一樓</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-1102.jpg" alt="108 年成果發表會第一張圖片" />
@@ -44,15 +44,15 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-1104.jpg" alt="108 年成果發表會第三張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 108 年中元普渡紙錢集中燒辦理現況 (108.08.01~08.29) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">中元普渡紙錢集中燒辦理現況</h2>
-          <h2 class="h5 mb-2">108.08.01 至 108.08.29</h2>
+          <small class="mb-2">108.08.01 至 108.08.29</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：南區焚化廠</h2>
+        <small class="mb-2">舉辦地點：南區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-0801.jpg" alt="108 年中元普渡紙錢集中燒化第一張圖片" />
@@ -64,15 +64,15 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-0803.jpg" alt="107 年中元普渡紙錢集中燒化第三張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 108 年中元普渡以功代金暨淨爐灑淨祈福法會 (108.07.24) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
-          <h2 class="h5 mb-2">108.07.24</h2>
+          <small class="mb-2">108.07.24</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：南區焚化廠</h2>
+        <small class="mb-2">舉辦地點：南區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-07.jpg" alt="108 年中元普渡祈福法會第一張圖片" />
@@ -81,15 +81,15 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-071.jpg" alt="108 年中元普渡祈福法會第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 清明節紙錢集中燒 (108.03.30-108.04.06) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
-          <h2 class="h5 mb-2">108.03.30 至 108.04.06</h2>
+          <small class="mb-2">108.03.30 至 108.04.06</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-03.jpg" alt="108 年清明節紙錢集中燒化第一張圖片" />
@@ -98,15 +98,15 @@ current: informationPicture_108
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-04.jpg" alt="108 年清明節紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 春節及天公生紙錢集中燒 (108.02.09-108.02.14) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
-          <h2 class="h5 mb-2">108.02.09 至 108.02.14</h2>
+          <small class="mb-2">108.02.09 至 108.02.14</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/108-01.jpg"
@@ -117,8 +117,8 @@ current: informationPicture_108
               alt="108 年春節及天公生紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
 
 </div>
