--- a/app/informationPicture_109.html
+++ b/app/informationPicture_109.html
@@ -5,7 +5,7 @@ engine: ejs
 current: informationPicture_109
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
@@ -24,15 +24,15 @@ current: informationPicture_109
   <h1 class="my-5 border-width pl-3">109 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 109 年中元普渡以功代金暨淨爐灑淨祈福法會 (109.08.12) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
-          <h2 class="h5 mb-2">109.08.12</h2>
+          <small class="mb-2">109.08.12</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：南區焚化廠</h2>
+        <small class="mb-2">舉辦地點：南區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/109-05.jpg" alt="109 年中元普渡祈福法會第一張圖片" />
@@ -41,15 +41,15 @@ current: informationPicture_109
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/109-051.jpg" alt="109 年中元普渡祈福法會第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 清明節紙錢集中燒 (109.03.28-109.04.06) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
-          <h2 class="h5 mb-2">109.03.28 至 109.04.06</h2>
+          <small class="mb-2">109.03.28 至 109.04.06</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/109-03.jpg" alt="109 年清明節紙錢集中燒化第一張圖片" />
@@ -58,15 +58,15 @@ current: informationPicture_109
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/109-04.jpg" alt="109 年清明節紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 春節及天公生紙錢集中燒 (109.01.29-109.02.03) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
-          <h2 class="h5 mb-2">109.01.29 至 109.02.03</h2>
+          <small class="mb-2">109.01.29 至 109.02.03</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/109-01.jpg"
@@ -77,8 +77,8 @@ current: informationPicture_109
               alt="109 年春節及天公生紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
 
 </div>
