--- a/app/informationPictures.html
+++ b/app/informationPictures.html
@@ -5,7 +5,7 @@ engine: ejs
 current: informationPictures
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
