--- a/app/information_1081029.html
+++ b/app/information_1081029.html
@@ -43,9 +43,7 @@ current: information_1081029
         而這名婦人過往也沒有抽菸習慣，也沒有氣喘病史，怎麼會罹患這個病症，為了解開這個答案，醫護團隊前往婦人住家調查，這才發現這名婦人信仰虔誠，天天在家燒香祭拜，造成室內的空污數值偏高，目前這名婦人已經接受治療，醫生預估恢復情況會達到健康人的
         7 成，同時也呼籲民眾燒香拜拜的時候，一定要注意通風，盡量不要燒紙錢。
       </p>
-      <a href="https://www.ettoday.net/news/20191025/1565237.htm" target="_blank" title="另開分頁，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
+      <a href="https://www.ettoday.net/news/20191025/1565237.htm" target="_blank" title="另開新視窗，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
     </section>
-    <!-- 預留空白處 -->
-    <section class="col-md-4"></section>
   </div>
 </div>
