--- a/app/information_1081230.html
+++ b/app/information_1081230.html
@@ -62,9 +62,7 @@ current: information_1081230
       <p>環保署考量部分民眾仍有燃燒金紙及香品需求，因此建議民眾使用環保材料及金紙集中燒等方式，落實「少香、少金、少炮」，以減少污染源頭。然而金紙燃燒後會產生硫氧化物、氮氧化物、一氧化碳、細懸浮微粒、苯、甲苯、甲醛、多環芳香烴等多種有害化學物質，但其排放量不易估算。根據環保署統計資料估計，<strong>2018 年</strong>國內金紙燒化數量約為<strong> 20 萬公噸</strong> ，然而此資料並非金紙確切的燒化數量。陳宜佳解釋，因金紙的來源、品質及燃燒設備等不定性因素的影響，因此僅能以金紙進口及生產總量推算民眾使用金紙的狀況。</p>
       <p>「只要在良好的燃燒環境下燃燒金紙，在燃燒的過程中都可以控制這些污染物的生成。」米孝萱表示，不同材質的金紙燃燒產生的物質差異並不大，若燃燒時的溫度夠高、空氣足夠，金紙燃燒後的污染物質也經過適當的處理，如此一來，燃燒金紙產生的污染便能符合排放的上限標準量。他建議，民眾若集中在環保金爐燃燒金紙，並集中處理燃燒排放物質，即可減少污染，像是過去環保署鼓勵民眾集中燃燒金紙，目的在於希望透過處理乾淨的金爐燃燒金紙，後續污染物也可經由污染防治設備統一處理。</p>
       <p>「不論是環保金紙還是一般金紙，基本上它們產生的污染物是不會差太多的。」目前國內並無確切數據顯示環保金紙比起傳統金紙更不會造成空氣污染，米孝萱也提及，燒金紙時，重點在於燃燒方法及技術，紙質則是其次。而民眾在選購金紙時更應注意檢視業者在商品包裝上的說明及商品資訊，並優先選購符合環保標章規格及 CNS 規範的香品及金、銀紙，且應盡量集中燃燒金紙，以降低環境污染。</p>
-      <a href="https://news.cts.com.tw/unews/campus/201905/201905231962355.html" target="_blank" title="另開分頁，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
+      <a href="https://news.cts.com.tw/unews/campus/201905/201905231962355.html" target="_blank" title="另開新視窗，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
     </section>
-     <!-- 預留空白處 -->
-    <section class="col-md-4"></section>
   </div>
 </div>
