--- a/app/information_1090727.html
+++ b/app/information_1090727.html
@@ -45,9 +45,7 @@ current: information_1090727
       </p>
       <p>環保局環境稽查科長陳偉德：「如果瞬間他的金紙的燒化量太大，就容易造成粒狀汙染、冒黑煙的情況發生。」</p>
       <p>玉皇宮解釋，他們已經改用環保金爐好幾年，星期天應該是信徒太多，紙錢燒過量，才會冒黑煙，只是住在宮廟旁，因為會面臨燒紙錢空汙問題，屬於嫌惡設施之一，平均房價一坪 23 至 28 萬元，因為緊鄰宮廟，廣告戶可能下殺一坪 19 萬元，還有像是高速公路、高架橋和變電所、高壓電塔，甚至加油站，都是房仲眼中最不受歡迎的前 3 大嫌惡設施。</p>
-      <a href="https://tw.news.yahoo.com/%E7%8E%89%E7%9A%87%E5%AE%AE-%E7%87%92%E7%B4%99%E9%8C%A2-%E7%AB%84%E9%BB%91%E7%85%99-%E6%B0%91%E7%9C%BE%E6%80%92%E6%8A%95%E8%A8%B4-075047775.html" target="_blank" title="另開分頁，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
+      <a href="https://tw.news.yahoo.com/%E7%8E%89%E7%9A%87%E5%AE%AE-%E7%87%92%E7%B4%99%E9%8C%A2-%E7%AB%84%E9%BB%91%E7%85%99-%E6%B0%91%E7%9C%BE%E6%80%92%E6%8A%95%E8%A8%B4-075047775.html" target="_blank" title="另開新視窗，前往新聞出處" class="mt-5"><strong>新聞網址</strong></a>
     </section>
-    <!-- 預留空白處 -->
-    <section class="col-md-4"></section>
   </div>
 </div>
