--- a/app/templeInfo.html
+++ b/app/templeInfo.html
@@ -5,7 +5,7 @@ engine: ejs
 current: templeInfo
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
@@ -36,7 +36,7 @@ current: templeInfo
       </div>
     </section>
     <!-- 主要內容 -->
-    <div class="col-md-8">
+    <section class="col-md-8 pt-0 pt-sm-4">
       <div class="tab-content" id="nav-tabContent">
         <!-- 高雄市已裝設環保金爐寺廟一覽 -->
         <section class="tab-pane fade show active" id="list-allTemple" role="tabpanel" aria-labelledby="list-home-list">
@@ -212,7 +212,7 @@ current: templeInfo
           </div>
         </section>
       </div>
-    </div>
+    </section>
   </div>
   
 </div>
