--- a/app/worshipShuwen.html
+++ b/app/worshipShuwen.html
@@ -83,5 +83,5 @@ current: worshipShuwen
         <button type="button" class="btn btn-primary px-4 worship-btn" id="stepFour">下一步</button>
       </div>
     </div>
-</div>
+  </section>
 </div>
