--- a/app/worshipUserInfo.html
+++ b/app/worshipUserInfo.html
@@ -65,7 +65,7 @@ current: worshipUserInfo
               <label for="userName">姓名 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="userName" aria-describedby="姓名" placeholder="請輸入姓名" />
               <div class="invalid-feedback">
-                格式錯誤!
+                請輸入姓名!
               </div>
               <div class="valid-feedback">
                 正確!
@@ -75,7 +75,7 @@ current: worshipUserInfo
               <label for="companyName">公司名稱 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="companyName" aria-describedby="公司名稱" placeholder="請輸入公司名稱" />
               <div class="invalid-feedback">
-                格式錯誤!
+                請輸入公司名稱!
               </div>
               <div class="valid-feedback">
                 正確!
@@ -85,7 +85,7 @@ current: worshipUserInfo
               <label for="userAddress">地址 <span class="text-primary">(必填)</span></label>
               <input type="text" class="form-control" id="userAddress" aria-describedby="地址" placeholder="請輸入地址" />
               <div class="invalid-feedback">
-                格式錯誤!
+                請輸地址!
               </div>
               <div class="valid-feedback">
                 正確!
