--- a/app/copyright.html
+++ b/app/copyright.html
@@ -5,7 +5,7 @@ engine: ejs
 current: copyright
 ---
 
-<div class="container">
+<div class="content container">
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
     <div id="tabC">
