--- a/app/informationNews.html
+++ b/app/informationNews.html
@@ -5,7 +5,7 @@ engine: ejs
 current: informationNews
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
