--- a/app/informationPicture_107.html
+++ b/app/informationPicture_107.html
@@ -5,7 +5,7 @@ engine: ejs
 current: informationPicture_107
 ---
 
-<div class="content container min-h">
+<div class="content container ">
 
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
@@ -30,15 +30,15 @@ current: informationPicture_107
   <h1 class="my-5 border-width pl-3">107 年度</h1>
 
   <!-- 主要內容 -->
-  <div class="mb-5">
+  <section class="mb-5">
     <div class="list-group">
       <!-- 107 年以功代金成果發表會 (107.10.12) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">以功代金成果發表會</h2>
-          <h2 class="h5 mb-2">107.10.12</h2>
+          <small class="mb-2">107.10.12</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：高雄市環保局一樓</h2>
+        <small class="mb-2">舉辦地點：高雄市環保局一樓</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-1001.jpg" alt="107 年成果發表會第一張圖片" />
@@ -50,15 +50,15 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-1003.jpg" alt="107 年成果發表會第三張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 107 年中元普渡紙錢集中燒辦理現況 (107.08.11~09.09) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">中元普渡紙錢集中燒辦理現況</h2>
-          <h2 class="h5 mb-2">107.08.11 至 107.09.09</h2>
+          <small class="mb-2">107.08.11 至 107.09.09</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：南區焚化廠</h2>
+        <small class="mb-2">舉辦地點：南區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-0901.jpg" alt="107 年中元普渡紙錢集中燒化第一張圖片" />
@@ -70,15 +70,15 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-0903.jpg" alt="107 年中元普渡紙錢集中燒化第三張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 107 年中元普渡以功代金暨淨爐灑淨祈福法會 (107.08.07) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">中元普渡以功代金暨淨爐灑淨祈福法會</h2>
-          <h2 class="h5 mb-2">107.08.07</h2>
+          <small class="mb-2">107.08.07</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：南區焚化廠</h2>
+        <small class="mb-2">舉辦地點：南區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-08.jpg" alt="107 年中元普渡祈福法會第一張圖片" />
@@ -87,15 +87,15 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-09.jpg" alt="107 年中元普渡祈福法會第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 清明節紙錢集中燒 (107.03.25-107.04.07) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">清明節紙錢集中燒</h2>
-          <h2 class="h5 mb-2">107.03.25 至 107.04.07</h2>
+          <small class="mb-2">107.03.25 至 107.04.07</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-06.jpg" alt="107 年清明節紙錢集中燒化第一張圖片" />
@@ -104,15 +104,15 @@ current: informationPicture_107
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-07.jpg" alt="107 年清明節紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 春節及天公生紙錢集中燒 (107.02.21-107.02.27) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">春節及天公生紙錢集中燒</h2>
-          <h2 class="h5 mb-2">107.02.21 至 107.02.27</h2>
+          <small class="mb-2">107.02.21 至 107.02.27</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：中區焚化廠</h2>
+        <small class="mb-2">舉辦地點：中區焚化廠</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-04.jpg"
@@ -123,15 +123,15 @@ current: informationPicture_107
               alt="107 年春節及天公生紙錢集中燒化第二張圖片" />
           </div>
         </div>
-      </section>
+      </article>
 
       <!-- 107 年高雄市成果發表會 (107.01.30) -->
-      <section class="border-under p-4">
-        <div class="d-flex justify-content-between">
+      <article class="border-under p-4">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <h2 class="h5 mb-2">高雄市成果發表會</h2>
-          <h2 class="h5 mb-2">107.01.30</h2>
+          <small class="mb-2">107.01.30</small>
         </div>
-        <h2 class="h5 mb-2">舉辦地點：高雄市立美術館 B1 演講廳</h2>
+        <small class="mb-2">舉辦地點：高雄市立美術館 B1 演講廳</small>
         <div class="row justify-content-start align-content-center my-5">
           <div class="col-12 col-md-4 mb-3 mb-md-0">
             <img class="img-fluid" src="http://www.escotech.com.tw/pudu/photos/107-01.jpg"
@@ -146,8 +146,8 @@ current: informationPicture_107
               alt="107 年高雄市成果發表會第三張圖片" />
           </div>
         </div>
-      </section>
+      </article>
     </div>
-  </div>
+  </section>
   
 </div>
