--- a/app/service.html
+++ b/app/service.html
@@ -21,12 +21,12 @@ current: service
   <h1 class="my-5 border-width pl-3">便民服務</h1>
 
   <!-- 主要內容 -->
-  <div class="row mb-5">
+  <section class="row mb-5">
     <div class="col-md-6">
       <a class="btn btn-info btn-block py-4 mb-3" href="serviceDownload.html" title="文件下載" role="button">
         文件下載
       </a>
     </div>
-  </div>
+  </section>
 
 </div>
