--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -5,7 +5,7 @@ engine: ejs
 current: sitemap
 ---
 
-<div class="container">
+<div class="content container">
   <!-- 麵包屑 -->
   <nav aria-label="breadcrumb" class="my-4">
     <div id="tabC">
